--- a/src/config.json
+++ b/src/config.json
@@ -5,6 +5,5 @@
     "api_post": "/api/v1/getpost/",
     "api_signup": "/api/v1/signup",
     "api_signin": "/api/v1/signin",
-    "api_admin_signin": "/api/v1/admin/signin",
-    "api_auth": "/api/v1/auth"
+    "api_admin_signin": "/api/v1/admin/signin"
 }
