edit & change hamburger menu

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
+    "react-burger-menu": "^3.0.8",
     "react-countup": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.3.0",
