handle user page & delete user

--- a/src/config.json
+++ b/src/config.json
@@ -8,5 +8,6 @@
     "api_admin_signin": "/api/v1/admin/signin",
     "api_post_contact": "/api/v1/sendContactForm",
     "api_get_contact": "/api/v1/getcontact",
-    "api_getUsers": "/api/v1/getusers"
+    "api_getUsers": "/api/v1/getusers",
+    "api_delUser": "/api/v1/deleteuser"
 }
