addet blog list & new blog in admin dashboard

--- a/src/config.json
+++ b/src/config.json
@@ -10,5 +10,7 @@
     "api_get_contact": "/api/v1/getcontact",
     "api_getUsers": "/api/v1/getusers",
     "api_delUser": "/api/v1/deleteuser",
-    "api_delpm": "/api/v1/deletecontact"
+    "api_delpm": "/api/v1/deletecontact",
+    "api_setblog": "/api/v1/setblog",
+    "api_delblog":"/api/v1/deleteblog"
 }
