--- a/src/config.json
+++ b/src/config.json
@@ -12,5 +12,9 @@
     "api_delUser": "/api/v1/deleteuser",
     "api_delpm": "/api/v1/deletecontact",
     "api_setblog": "/api/v1/setblog",
-    "api_delblog":"/api/v1/deleteblog"
+    "api_delblog":"/api/v1/deleteblog",
+    "api_getapps":"/api/v1/getapps",
+    "api_createapps" : "/api/v1/createapp",
+    "api_delapps" : "/api/v1/deleteapp"
+    
 }
