--- a/src/config.json
+++ b/src/config.json
@@ -15,6 +15,8 @@
     "api_delblog":"/api/v1/deleteblog",
     "api_getapps":"/api/v1/getapps",
     "api_createapps" : "/api/v1/createapp",
-    "api_delapps" : "/api/v1/deleteapp"
-    
+    "api_delapps" : "/api/v1/deleteapp",
+    "api_getapp" : "/api/v1/getapp/",
+    "api_getuserapp" : "/api/v1/getuserapp/"
+
 }
