final tejarat attar khune

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "App Saz",
-  "name": "وب اَپِ اَپلیکیشن ساز",
+  "short_name": "عطار",
+  "name": "وب اَپِ عطار خونه",
   "icons": [
     {
       "src": "BoxEndLogo1.png",
