--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,7 @@
 {
-    "baseUrl": "https://example-api.jvdpd1021.repl.co",
+    "baseUrl": "https://sutech.iran.liara.run",
     "api_blog": "/api/v1/getblog",
+    "api_cart": "/api/v1/getcart",
     "api_price": "/api/v1/getprice",
     "api_post": "/api/v1/getpost/",
     "api_signup": "/api/v1/signup",
@@ -10,8 +11,10 @@
     "api_get_contact": "/api/v1/getcontact",
     "api_getUsers": "/api/v1/getusers",
     "api_delUser": "/api/v1/deleteuser",
+    "api_delCart": "/api/v1/deletecart",
     "api_delpm": "/api/v1/deletecontact",
     "api_setblog": "/api/v1/setblog",
+    "api_setcart": "/api/v1/cart",
     "api_delblog":"/api/v1/deleteblog",
     "api_getapps":"/api/v1/getapps",
     "api_createapps" : "/api/v1/createapp",
